src/Standard/Standard_Handle.hxx
@@ -18,6 +18,7 @@
 #include <Standard_Std.hxx>
 #include <Standard_Stream.hxx>
 #include <Standard_Transient.hxx>
+#include <Standard_Macro.hxx>
 
 class Standard_Transient;
 
@@ -71,7 +72,7 @@ namespace opencascade {
     }
 
     //! Move constructor
-    handle (handle&& theHandle) noexcept : entity(theHandle.entity)
+    handle (handle&& theHandle) Standard_Noexcept : entity(theHandle.entity)
     {
       theHandle.entity = 0;
     }
@@ -112,7 +113,7 @@ namespace opencascade {
     }
 
     //! Move operator
-    handle& operator= (handle&& theHandle) noexcept
+    handle& operator= (handle&& theHandle) Standard_Noexcept
     {
       std::swap (this->entity, theHandle.entity);
       return *this;
