src/TCollection/TCollection_ExtendedString.hxx
@@ -31,6 +31,7 @@
 #include <Standard_Real.hxx>
 #include <Standard_OStream.hxx>
 #include <Standard_PCharacter.hxx>
+#include <Standard_Macro.hxx>
 class TCollection_AsciiString;
 
 
@@ -98,7 +99,7 @@ public:
   Standard_EXPORT TCollection_ExtendedString(const TCollection_ExtendedString& astring);
 
   //! Move constructor
-  TCollection_ExtendedString (TCollection_ExtendedString&& theOther) noexcept
+  TCollection_ExtendedString (TCollection_ExtendedString&& theOther) Standard_Noexcept
   : mystring (theOther.mystring),
     mylength (theOther.mylength)
   {
@@ -153,7 +154,7 @@ void operator = (const TCollection_ExtendedString& fromwhere)
   Standard_EXPORT void Swap (TCollection_ExtendedString& theOther);
 
   //! Move assignment operator
-  TCollection_ExtendedString& operator= (TCollection_ExtendedString&& theOther) noexcept { Swap (theOther); return *this; }
+  TCollection_ExtendedString& operator= (TCollection_ExtendedString&& theOther) Standard_Noexcept { Swap (theOther); return *this; }
 
   //! Frees memory allocated by ExtendedString.
   Standard_EXPORT ~TCollection_ExtendedString();
